<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MetroExplore">

    <!-- body_head -->
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/metro_guide"
        android:textAppearance="@style/BigTitle"/>

    <LinearLayout
        android:layout_below="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:gravity="end|center_vertical"
        >

        <!-- TextView on the left -->
        <TextView
            android:id="@+id/change_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:gravity="top"
            android:text="@string/change_order"
            android:textAppearance="@style/BigContent" />

        <!-- RelativeLayout with image on the right -->
        <RelativeLayout
            android:id="@+id/outline_int"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_gravity="end|center_vertical"
            android:background="@drawable/icon_sort" />

    </LinearLayout>

    <!-- 按鈕 1 -->
    <RelativeLayout
        android:id="@+id/button_1"
        android:layout_width="317dp"
        android:layout_height="84dp"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/title"
        android:background="@drawable/button_bg"
        android:backgroundTint="#ECD5C1"> <!-- 設定顏色 -->

        <ImageView
            android:id="@+id/icon_1"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginLeft="16dp"
            android:layout_centerVertical="true"
            android:src="@drawable/wenhu_photo"/>

        <TextView
            android:id="@+id/text_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/icon_1"
            android:layout_marginLeft="16dp"
            android:layout_centerVertical="true"
            android:text="@string/wenhu_line"
            android:textAppearance="@style/BigContent"/>
    </RelativeLayout>

    <!-- 按鈕 2 -->
    <RelativeLayout
        android:id="@+id/button_2"
        android:layout_width="317dp"
        android:layout_height="84dp"
        android:layout_below="@id/button_1"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_bg"
        android:backgroundTint="#FAD2E1"> <!-- 設定顏色 -->

        <ImageView
            android:id="@+id/icon_2"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginLeft="16dp"
            android:layout_centerVertical="true"
            android:src="@drawable/tamsui_xinyi_photo"/>

        <TextView
            android:id="@+id/text_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/icon_2"
            android:layout_marginLeft="16dp"
            android:layout_centerVertical="true"
            android:text="@string/tamsui_xinyi_line"
            android:textAppearance="@style/BigContent"/>
    </RelativeLayout>

    <!-- 按鈕 3 -->
    <RelativeLayout
        android:id="@+id/button_3"
        android:layout_width="317dp"
        android:layout_height="84dp"
        android:layout_below="@id/button_2"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_bg"
        android:backgroundTint="#CEF4BB"> <!-- 設定顏色 -->

        <ImageView
            android:id="@+id/icon_3"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginLeft="16dp"
            android:layout_centerVertical="true"
            android:src="@drawable/songshan_xindian_photo"/>

        <TextView
            android:id="@+id/text_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/icon_3"
            android:layout_marginLeft="16dp"
            android:layout_centerVertical="true"
            android:text="@string/songshan_xindian_line"
            android:textAppearance="@style/BigContent"/>
    </RelativeLayout>

    <!-- 按鈕 4 -->
    <RelativeLayout
        android:id="@+id/button_4"
        android:layout_width="317dp"
        android:layout_height="84dp"
        android:layout_below="@id/button_3"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_bg"
        android:backgroundTint="#FEDEC0"> <!-- 設定顏色 -->

        <ImageView
            android:id="@+id/icon_4"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginLeft="16dp"
            android:layout_centerVertical="true"
            android:src="@drawable/zhonghe_xinlu_photo"/>

        <TextView
            android:id="@+id/text_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/icon_4"
            android:layout_marginLeft="16dp"
            android:layout_centerVertical="true"
            android:text="@string/zhonghe_xinlu_line"
            android:textAppearance="@style/BigContent"/>
    </RelativeLayout>

    <!-- 按鈕 5 -->
    <RelativeLayout
        android:id="@+id/button_5"
        android:layout_width="317dp"
        android:layout_height="84dp"
        android:layout_below="@id/button_4"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_bg"
        android:backgroundTint="#BEE1E6"> <!-- 設定顏色 -->

        <ImageView
            android:id="@+id/icon_5"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginLeft="16dp"
            android:layout_centerVertical="true"
            android:src="@drawable/bannan_photo"/>

        <TextView
            android:id="@+id/text_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/icon_5"
            android:layout_marginLeft="16dp"
            android:layout_centerVertical="true"
            android:text="@string/bannan_line"
            android:textAppearance="@style/BigContent"/>
    </RelativeLayout>

    <!-- 按鈕 6 -->
    <RelativeLayout
        android:id="@+id/button_6"
        android:layout_width="317dp"
        android:layout_height="84dp"
        android:layout_below="@id/button_5"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_bg"
        android:backgroundTint="#FFF1BA"> <!-- 設定顏色 -->

        <ImageView
            android:id="@+id/icon_6"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginLeft="16dp"
            android:layout_centerVertical="true"
            android:src="@drawable/circular_photo"/>

        <TextView
            android:id="@+id/text_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/icon_6"
            android:layout_marginLeft="16dp"
            android:layout_centerVertical="true"
            android:text="@string/circular_line"
            android:textAppearance="@style/BigContent"/>
    </RelativeLayout>


</RelativeLayout>